# robotica-movil

./: .gitignore
tp-final/: Dockerfile  README.md  aligners.py  load_positions.py  main.py  metrics.py  plot.py  requirements.txt
tp-final/data/: mh01.colmap.txt  mh01.glomap.txt  mh01.gt.txt  rd.colmap.txt  rd.glomap.txt  rd.gt.txt
tp-final/evo_data/: mh01.colmap.txt  mh01.glomap.txt  rd.colmap.txt  rd.glomap.txt
tp1/: README.md
tp1/ejercicio5/: gen_cam0_ground_truth.py  plot_cam0.py  poses.py  requirements.txt  utils.py
tp2/: ej5.py
tp2/datos/: log_circ.txt  log_keyboard_teleop.txt  log_lin_neg_ang_neg.txt  log_lin_neg_ang_pos.txt  log_lin_pos_ang_neg.txt  log_lin_pos_ang_pos.txt
tp2/ej8/: Dockerfile  README.md  launch.py  world.model
tp2/ej8/cylinder_detector_pkg/: package.xml  setup.cfg  setup.py
tp2/ej8/cylinder_detector_pkg/cylinder_detector_pkg/: cylinder_detector_node.py
tp3/: CMakeLists.txt  README.md  default.rviz  stereo_processing.cpp
tp3/data/calibrationdata/: left.yaml  ost.txt  out.txt  right.yaml
tp3/data/trajectory_estimation/: body.csv  cam.csv
tp3/include/: cam_params.hpp  trajectory_node.hpp
tp3/src/: cam_params.cpp  main.cpp  mapping_node.cpp  stereoproc.cpp  trajectory_node.cpp
tp3/stereo_processing/: CMakeLists.txt  Dockerfile  entrypoint.sh  plot_poses.py
tp3/stereo_processing/include/: bagreader.hpp  cam_params.hpp  mapping_node.hpp  node_utils.hpp  poses.hpp  publisher.hpp  stereoproc.hpp  trajectory_node.hpp
tp3/stereo_processing/src/: bagreader.cpp  cam_params.cpp  main.cpp  mapping_node.cpp  node_utils.cpp  poses.cpp  publisher.cpp  stereoproc.cpp  trajectory_node.cpp
tp4/: README.md  ekf.both.txt  ekf.py  ekf.txt  localization.py  pf.both.txt  pf.py  pf.txt  pfext.txt  pfext20.txt  pfext50.txt  pfext500.txt  soccer_field.py  teoria.tex  tests.py
